box shadow overflow fixed

--- a/static/cover.css
+++ b/static/cover.css
@@ -29,9 +29,10 @@
 
 html,body {
   /* text-shadow: 0 .05rem .1rem rgb(254, 251, 251); */
-  box-shadow: inset 0 0 5rem rgba(30, 30, 31, 0.581);
+  box-shadow: inset 0 0 5rem rgba(20, 20, 93, 0.419);
   background-color: #d1d5dcd4;
-  height: 100%;
+  overflow-y: scroll;
+  /* height: 100%; */
   /* color: white; */
 }
 
